<resources>
    <string name="app_name" translatable="false">Spell compendium</string>
    <string name="level">Level</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Placeholders -->
    <string name="spell_title_placeholder" translatable="false">Spell</string>
    <string name="spell_school_placeholder" translatable="false">School</string>
    <string name="spell_level_placeholder" translatable="false">Level</string>
    <string name="spell_range_placeholder" translatable="false">Range</string>
    <string name="spell_components_placeholder" translatable="false">Components</string>
    <string name="spell_materials_placeholder" translatable="false">Materials</string>
    <string name="spell_ritual_placeholder" translatable="false">Ritual</string>
    <string name="spell_area_of_effect_placeholder" translatable="false">Area of effect</string>
    <string name="spell_duration_placeholder" translatable="false">Duration</string>
    <string name="spell_concentration_placeholder" translatable="false">Concentration</string>
    <string name="spell_casting_time_placeholder" translatable="false">Casting time</string>
    <string name="spell_attack_type_placeholder" translatable="false">Attack type</string>
    <string name="spell_damage_type_placeholder" translatable="false">Damage type</string>
    <string name="spell_damage_lvl_placeholder" translatable="false">Damage levels</string>
    <string name="spell_classes_placeholder" translatable="false">Classes</string>
    <string name="spell_description_placeholder" translatable="false">Description</string>

    <string name="school">School</string>
    <string name="range">Range</string>
    <string name="components">Components</string>
    <string name="materials">Materials</string>
    <string name="casting_time">Casting time</string>
    <string name="attack_type">Attack type</string>
    <string name="damage_type">Damage type</string>
    <string name="damage_lvl">Damage levels</string>
    <string name="ritual">Ritual</string>
    <string name="concentration">Concentration</string>
    <string name="area_of_effects">Area of effects</string>
    <string name="duration">Duration</string>
    <string name="nothing">None</string>

    <!-- Preference Titles -->
    <string name="languages_header">Languages</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search a spell</string>
    <string name="language_summary">Modify the language for the app</string>
    <string name="language_parameter" translatable="false">lang</string>
    <string name="name">Name</string>
    <string name="sort_order">Sort order</string>
    <string name="filter">Filter</string>

    <string name="level_0">Level 0</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>

    <string name="school_0">Abjuration</string>
    <string name="school_1">Conjuration</string>
    <string name="school_2">Divination</string>
    <string name="school_3">Enchantment</string>
    <string name="school_4">Evocation</string>
    <string name="school_5">Illusion</string>
    <string name="school_6">Necromancy</string>
    <string name="school_7">Transmutation</string>
    <string name="reset_filter">Reset filter</string>
</resources>